--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <body>
 <h1>
-Welcome Omar J. Sati
+Welcome to my first website
 </h1>
-<h2>Hello, this is my first web page! Moe Malik is an Uber hater!</h2>
+<h2>Moe Malik is obsessed with Liverpool</h2>
+<img src="liverpool.jpg"></img>
 </body>
 </html>
